tests/ui/hygiene/intercrate.stderr
error: type `{fn item foo::bar::f: fn() -> u32}` is private
  --> $DIR/intercrate.rs:8:16
   |
LL |     assert_eq!(intercrate::foo::m!(), 1);
   |                ^^^^^^^^^^^^^^^^^^^^^ private type
   |
   = note: this error originates in the macro `intercrate::foo::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

